# zfs_raidz_striping

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp  post_by_Max_Bruning.md  post_by_Max_Bruning_mod.md  pyproject.toml
ddrescue_map_generator/: raidzdump_ctypes.py  test_raidzdump_ctypes.py
raidzdump/: CMakeLists.txt  libraidzdump.c  libraidzdump.cpp  libraidzdump.h  main.c  main.cpp  post_by_Max_Bruning.md  post_by_Max_Bruning_mod.md
